contrast fix bg

--- a/style.css
+++ b/style.css
@@ -771,7 +771,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(165, 147, 99, 1);
     padding: 40px 40px 40px 40px;
 }
 
@@ -797,7 +797,8 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #CB4B10;
+    opacity: 0.9;
     color: #FFFFFF!important;
 }
 
